# flutter-fractal-forge

./: .flutter-plugins  .gitignore  .refactorignore  .rgignore  AGENTS.md  AI_RULES.md  ANALYSIS_COMPLETE.txt  ANALYSIS_INDEX.md  BLOCKER_REPORT_2026-02-13.md  BUG_INVENTORY_2026-02-13.md  BUG_INVENTORY_SUMMARY.txt  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DEEPDIVE_SUMMARY.txt  DELIVERY_2026-02-13.md  DEVELOPMENT.md  FRACTAL_ANALYSIS_INDEX.md  GPU_EMULATOR_FIX.md  NOTICE  OPENSOURCE_PROJECTS_INDEX.md  PERFORMANCE.md  PLAYTEST_REPORT.md  PRD.md  README.md  SECURITY.md  SHADER_OPTIMIZATIONS.md  STORE_LISTING.md  TECHNICAL_ANALYSIS_GPU_RENDERING.md  TODO.md  UI_GUIDELINES.md  UI_UX_DIAGRAM_README.md  VISUAL_AUDIT_SUMMARY.md  analysis_options.yaml  app.description.md  ar.md  assetlinks.json  audience_and_naming.md  (+16 more)
.claude/: memory.db  settings.json
.claude-flow/: .trend-cache.json  CAPABILITIES.md  config.yaml  daemon-state.json  daemon.pid
.github/: PULL_REQUEST_TEMPLATE.md
.maestro/: 01_app_launch.yaml  02_catalog_navigation.yaml  03_viewer_controls.yaml  04_export_flow.yaml  05_every_fractal_smoke.yaml  06_single_fractal_probe.yaml  run_all.sh  run_physical_device_suite.sh
.omc/: .project-memory.json.tmp.74c1b498-9a88-4ae2-8b8a-8ed6a57d37a7  .project-memory.json.tmp.8cc83a80-36f6-4d12-9a3b-de4d4df61714  .project-memory.json.tmp.e1207a07-4ccc-418a-9b68-2906896d9c8e  notepad.md  project-memory.json
.swarm/: context.md  dark-matter.md  doc-manifest.json  knowledge.jsonl  schema.sql  state.json  telemetry.jsonl
agent_test_logs/: emulator_log_400.txt  logcat_tail.txt  logcat_tail2.txt  summary_100_20260208_024805.txt  summary_100_20260208_135332.txt  summary_101_20260208_024918.txt  summary_101_20260208_135355.txt  summary_102_20260208_025031.txt  summary_102_20260208_135416.txt  summary_103_20260208_025143.txt  summary_103_20260208_135437.txt  summary_104_20260208_025256.txt  summary_104_20260208_135456.txt  summary_105_20260208_025408.txt  summary_105_20260208_135516.txt  summary_106_20260208_025521.txt  summary_106_20260208_135538.txt  summary_107_20260208_025634.txt  summary_107_20260208_135600.txt  summary_108_20260208_025747.txt  summary_108_20260208_135621.txt  summary_109_20260208_025900.txt  summary_109_20260208_135641.txt  summary_10_20260208_003514.txt  summary_10_20260208_005849.txt  summary_10_20260208_112715.txt  summary_110_20260208_030013.txt  summary_110_20260208_135701.txt  summary_111_20260208_030125.txt  summary_111_20260208_135721.txt  (+543 more)
exploration-vulkan-ndk-app/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  vulkan_engine.cpp  vulkan_engine.h
exploration-vulkan-ndk-app/app/src/main/cpp/shaders/: mandelbrot.comp  mandelbulb.comp
(+10917 files in other folders)
